ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Object to manage Applying for/Use of Benefit for HomeOwner (application by Contractor)</description>
    <label>(Deprecated) Application</label>
    <nameField>
        <displayFormat>App-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>