ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Address_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Address_Text_Area__c</fullName>
    <description>Filled with Action &quot;Submit Application&quot; on Contractor Benefit record.</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>