ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Approved_by_Loyalty_Admin__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Loyalty_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Loyalty Admin</label>
    <type>Checkbox</type>
</CustomField>