ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to junction object &quot;Contractor Benefit&quot;</description>
    <label>Benefit</label>
    <referenceTo>IKOPRO_Contractor_Benefit__c</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>