ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <defaultValue>&quot;Please use this field for Comments&quot;</defaultValue>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>