ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First and Last Name of Contractor (pre-filled with partner user contact name)</description>
    <label>Contractor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Contractor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>