ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Document_1__c.field-meta.xml
<CustomField>
    <fullName>Document_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when the 1st document or image has been uploaded.</inlineHelpText>
    <label>Document 1</label>
    <type>Checkbox</type>
</CustomField>