ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Document_2__c.field-meta.xml
<CustomField>
    <fullName>Document_2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when the 2nd document or image has been uploaded.</inlineHelpText>
    <label>Document 2</label>
    <type>Checkbox</type>
</CustomField>