ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Document_3__c.field-meta.xml
<CustomField>
    <fullName>Document_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when the 3rd document or image has been uploaded.</inlineHelpText>
    <label>Document 3</label>
    <type>Checkbox</type>
</CustomField>