ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Final_Approval_On__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_On__c</fullName>
    <label>Final Approval On</label>
    <type>Date</type>
</CustomField>