ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Contractor__r.BillingStreet &amp;  BR() &amp;
Contractor__r.BillingCity &amp;  &quot;, &quot; &amp; Contractor__r.BillingState &amp;  &quot;, &quot; &amp; Contractor__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>