ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Home_Owner__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup (Account) to Person Account Home Owner.</description>
    <label>Home Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IKOPRO Home Owner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>