ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <defaultValue>&quot;Please add your attachments/files after you save this Application record&quot;</defaultValue>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>