ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Number_of_Required_Documents_to_Upload__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Required_Documents_to_Upload__c</fullName>
    <formula>Benefit__r.Benefit__r.Required_Documents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please tick the &apos;Document&apos;-checkboxes each time you upload a required document. Otherwise you will not be able to submit this application for approval.</inlineHelpText>
    <label>Number of Required Documents to Upload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>