ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Ready_to_Submit__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Submit__c</fullName>
    <description>Ticked if the number of required documents to be uploaded equals the amount of &apos;Document&apos;-checkboxes ticked.</description>
    <formula>OR( 
AND(Number_of_Required_Documents_to_Upload__c = 4,
 Document_1__c,
 Document_2__c,
 Document_3__c,
 Document_4__c),
AND(Number_of_Required_Documents_to_Upload__c = 3,
 Document_1__c,
 Document_2__c,
 Document_3__c),
AND(Number_of_Required_Documents_to_Upload__c = 2,
 Document_1__c,
 Document_2__c),
AND(Number_of_Required_Documents_to_Upload__c = 1,
 Document_1__c)
)</formula>
    <label>Ready to Submit</label>
    <type>Checkbox</type>
</CustomField>