ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/fields/Rejected_by_Loyalty_Admin__c.field-meta.xml
<CustomField>
    <fullName>Rejected_by_Loyalty_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected by Loyalty Admin</label>
    <type>Checkbox</type>
</CustomField>