ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/recordTypes/Approved_Application.recordType-meta.xml
<RecordType>
    <fullName>Approved_Application</fullName>
    <active>true</active>
    <label>Approved Application</label>
</RecordType>