ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/listViews/Loyalty_Admins_Application.listView-meta.xml
<ListView>
    <fullName>Loyalty_Admins_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Loyalty Admins</label>
    <queue>Loyalty_Admins</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>