ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Application__c/listViews/Shared_Services_Application.listView-meta.xml
<ListView>
    <fullName>Shared_Services_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Shared Services</label>
    <queue>Shared_Services</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>